--- a/Cat Painting.html
+++ b/Cat Painting.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>fCC Cat Painting</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="Cat Painting.css">
+    <link rel="https://github.com/CeceMcAwesomeville/Cat-Painting/blob/37a96e16f42c43dc4d4f093bacbda87b94092ea1/Cat%20Painting.css">
 </head>
 <body>
     <main>
